# glfont

./: .clang_complete  .gitignore  CMakeLists.txt  README.md  compile_flags.txt
assets/shaders/: glfont_frag.glsl  glfont_vertex.glsl
include/glfont/: glfont.h  macros.h  string_utils.h
src/: glfont.c  main.c  string_utils.c
